Adding desc and license

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,7 @@
 [package]
 name = "solana-program-types"
+description = "Essential types for Solana programs."
+license = "LICENSE"
 version = "0.1.0"
 edition = "2021"
 
