--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "solana-program-types"
 description = "Essential types for Solana programs."
-license = "LICENSE"
+license = "Apache-2.0"
 version = "0.1.0"
 edition = "2021"
 
